--- a/index.html
+++ b/index.html
@@ -511,32 +511,50 @@
             text-transform: uppercase
         }
 
+        .team-indicator {
+            font-family: 'Luckiest Guy', cursive;
+            padding: 10px 22px !important;
+            border-radius: 25px !important;
+            font-size: 24px !important;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+            display: none;
+            margin-bottom: 12px;
+            color: white !important;
+            /* Premium Claymorphism */
+            box-shadow: inset 0 -6px 0 rgba(0, 0, 0, 0.2), 0 8px 20px rgba(0, 0, 0, 0.3) !important;
+            text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3) !important;
+            border: 2px solid rgba(255, 255, 255, 0.3) !important;
+            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            animation: fadeInDown 0.5s ease-out both;
+        }
+
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px) scale(0.8);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+
         .team-a {
-            color: #5CE1E6;
-            border: 2px solid #5CE1E6;
-            background: rgba(92, 225, 230, 0.15);
-            box-shadow: 0 0 15px rgba(92, 225, 230, 0.4);
+            background: linear-gradient(180deg, #5CE1E6, #1A6FB5) !important;
         }
 
         .team-b {
-            color: #FFB847;
-            border: 2px solid #FFB847;
-            background: rgba(255, 184, 71, 0.15);
-            box-shadow: 0 0 15px rgba(255, 184, 71, 0.4);
+            background: linear-gradient(180deg, #FFB847, #CC7A00) !important;
         }
 
         .team-c {
-            color: #FF6B6B;
-            border: 2px solid #FF6B6B;
-            background: rgba(255, 107, 107, 0.15);
-            box-shadow: 0 0 15px rgba(255, 107, 107, 0.4);
+            background: linear-gradient(180deg, #FF6B6B, #C0392B) !important;
         }
 
         .team-d {
-            color: #4CAF50;
-            border: 2px solid #4CAF50;
-            background: rgba(76, 175, 80, 0.15);
-            box-shadow: 0 0 15px rgba(76, 175, 80, 0.4);
+            background: linear-gradient(180deg, #4CAF50, #2E7D32) !important;
         }
 
         .score-display {
@@ -1996,34 +2014,53 @@
 
                 document.getElementById('finalScore').textContent = score;
                 const details = document.getElementById('resDetails');
+                const btnReplay = document.getElementById('btnReplay');
                 details.innerHTML = '';
 
-                // If Team Mode, show comparison
+                const isLastTeam = isTeamMode ? (currentTeamIdx === teamOrder.length - 1) : true;
+
+                // If Team Mode, handle tournament flow
                 if (isTeamMode) {
-                    // Find winner
-                    let winner = teamOrder[0];
-                    let maxS = teamScoresMap[winner];
-                    let isTie = false;
-                    teamOrder.slice(1).forEach(tid => {
-                        if (teamScoresMap[tid] > maxS) { winner = tid; maxS = teamScoresMap[tid]; isTie = false; }
-                        else if (teamScoresMap[tid] === maxS) isTie = true;
-                    });
+                    if (isLastTeam) {
+                        // FINAL PODIUM
+                        let winner = teamOrder[0];
+                        let maxS = teamScoresMap[winner];
+                        let isTie = false;
+                        teamOrder.slice(1).forEach(tid => {
+                            if (teamScoresMap[tid] > maxS) { winner = tid; maxS = teamScoresMap[tid]; isTie = false; }
+                            else if (teamScoresMap[tid] === maxS) isTie = true;
+                        });
 
-                    const winnerTxt = isTie ? '¡EMPATE! 🤝' : `¡GANA ${teamNamesMap[winner].toUpperCase()}! 🏆`;
+                        const winnerTxt = isTie ? '¡EMPATE! 🤝' : `¡GANA ${teamNamesMap[winner].toUpperCase()}! 🏆`;
 
-                    let compareHTML = `<div style="text-align:center; margin-bottom:15px; background: rgba(0,0,0,0.2); padding: 15px; border-radius: 20px;">
-                        <div style="font-size:24px; font-weight:800; color:#FFD700; margin-bottom: 10px;">${winnerTxt}</div>
-                        <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px; font-size:14px;">`;
+                        let compareHTML = `<div style="text-align:center; margin-bottom:15px; background: rgba(0,0,0,0.2); padding: 15px; border-radius: 20px; border: 2px solid rgba(255,215,0,0.3)">
+                            <div style="font-size:28px; font-weight:800; color:#FFD700; margin-bottom: 12px; text-shadow: 0 3px 6px rgba(0,0,0,0.3); font-family:'Luckiest Guy', cursive;">${winnerTxt}</div>
+                            <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:10px;">`;
 
-                    teamOrder.forEach(tid => {
-                        compareHTML += `<div class="team-indicator team-${tid.toLowerCase()}" style="display:block; margin:0; padding:6px 12px">${teamNamesMap[tid]}: ${teamScoresMap[tid]}</div>`;
-                    });
+                        teamOrder.forEach(tid => {
+                            compareHTML += `<div class="team-indicator team-${tid.toLowerCase()}" style="display:block; margin:0; padding:8px 15px; font-size: 14px !important;">${teamNamesMap[tid]}: ${teamScoresMap[tid]}</div>`;
+                        });
 
-                    compareHTML += `</div></div>`;
-                    details.innerHTML = compareHTML;
+                        compareHTML += `</div></div>`;
+                        details.innerHTML = compareHTML;
 
-                    // Switch to next team index
-                    currentTeamIdx = (currentTeamIdx + 1) % teamOrder.length;
+                        // Change replay button to Reset Tournament
+                        btnReplay.textContent = "NUEVO TORNEO";
+                        btnReplay.onclick = () => { resetTournament(); startGame(); };
+                    } else {
+                        // MID-TOURNAMENT: Just current team results
+                        const nextT = teamNamesMap[teamOrder[currentTeamIdx + 1]];
+                        details.innerHTML = `<div style="text-align:center; margin-bottom:15px; background: rgba(255,255,255,0.1); padding: 15px; border-radius: 20px;">
+                            <div style="font-size:18px; font-weight:800; color:white; margin-bottom:10px">¡FIN DEL TURNO!</div>
+                            <div class="team-indicator team-${teamOrder[currentTeamIdx].toLowerCase()}" style="display:inline-block; font-size:18px !important;">${teamNamesMap[teamOrder[currentTeamIdx]]}</div>
+                        </div>`;
+
+                        btnReplay.textContent = "TURNO: " + nextT.toUpperCase();
+                        btnReplay.onclick = () => { currentTeamIdx++; startGame(); };
+                    }
+                } else {
+                    btnReplay.textContent = t('volverJugar');
+                    btnReplay.onclick = () => playAgain();
                 }
 
                 wordsHistory.forEach(item => {
@@ -2032,6 +2069,11 @@
                 });
                 showScreen('results');
                 launchConfetti();
+            }
+
+            function resetTournament() {
+                currentTeamIdx = 0;
+                teamOrder.forEach(tid => teamScoresMap[tid] = 0);
             }
 
             function playAgain() { startGame(); }
